update package structure to use Reexport, submodules

--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,6 @@ version = "0.1.0"
 [deps]
 HyperGraphs = "e54fe45a-379a-431d-91b1-83d23201f60f"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
