--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Leo <lpdiaz@student.unimelb.edu.au>"]
 version = "0.1.0"
 
 [deps]
+Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 HyperGraphs = "e54fe45a-379a-431d-91b1-83d23201f60f"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
